--- a/src/components/Nav/Nav.module.css
+++ b/src/components/Nav/Nav.module.css
@@ -1,8 +1,14 @@
 .nav {
     grid-area: n;
     background-color: darkcyan;
+    padding: 20px;
 }
 
-.item {
+.item a {
     color: #fff;
+    text-decoration: none;
+}
+
+.item a.activeLink {
+    color: gold;
 }
