--- a/src/components/Dialogs/Message.module.css
+++ b/src/components/Dialogs/Message.module.css
@@ -2,7 +2,7 @@
     border: 1px solid #000;
     border-radius: 0.3em;
     border: none;
-    padding: 0.4em;
+    padding: 0.4em 0.4em 0 0.4em;
     display: flex;
 }
 
