--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -70,3 +70,11 @@
 .header img {
     width: 70px;
 }
+.loginBlock {
+    float: right;
+}
+.loginBlock a {
+    color: #000;
+    font-weight: bold;
+    display: inline-block;
+}
