--- a/src/components/common/preloader/FormControls/FormControls.module.css
+++ b/src/components/common/preloader/FormControls/FormControls.module.css
@@ -7,3 +7,9 @@
 .formControl.error span {
     color: red;
 }
+
+.formSummaryError {
+    border: red 1px solid;
+    padding: 5px;
+    color: red;
+}
